Fixes API REST backup upload functionality
